# precision-gamepad-source

./: CMakeLists.txt  README.md  precision-gamepad-source.c
data/locale/: de-DE.ini  en-US.ini  es-ES.ini
